static/css/base.css
html {
overflow-y: scroll;
}
html, body {
height: 100%; 
margin: 0; 
padding: 0;
}
.background{
min-width: 100%;
background-color: #DDD;
min-height: 100%;
}
.canvas{
height: 100%
}
.header{
background-color: #0091e0;
height: 125px;
}
.header-border{
position: relative;
z-index: 2;
height: 5px;
background-color: #020233;
}
.header-menu-tab{
background-color: #020233;
text-align: center;
position: absolute;
z-index: 2;
padding: 0 10px 0 10px;
height: 25px;
border-bottom-left-radius: 15px;
border-bottom-right-radius: 15px;
}
.header-menu-tab a{
font-size: 12px;
margin: 8px;
white-space: nowrap;
}
.header-menu-tab a, .header-menu-tab a:link, .header-menu-tab a:active, .header-menu-tab a:visited{
text-decoration: none;
color: #EEE;
}
.header-menu-tab a:hover,.header-menu-tab a:focus{
text-decoration: none;
color: #19C;
}
.banner
{
position:absolute;
z-index: 1;
}
.linkbutton:hover, .linkbutton:focus{
background-color: #020233;
color: #19C;
}
.linkbutton{
background-color: #020233;
font-size: 12px;
border: none;
color: #EEE;
}
.header-menu-tab ul{
padding: 0;
margin: 0;
white-space: nowrap;
}
.header-menu-tab li{
display: inline;
padding: 0 10px 0 10px;
}
#logoutform{
display: inline;
}
.header-left{
text-align: left;
white-space: nowrap;
}
img.name{
position: relative;
z-index: 2;
margin: 61px 0 0 45px;
white-space: nowrap;
}
.logo img{
position:relative;
z-index: 2;
margin: 38px 0px 0px 20px;
}
a.logo:hover, a.logo:focus, a.logo:visited, a.logo:active{
text-decoration: none;
}
.header-right{
text-align: center;
white-space: nowrap;
}
.tagline{
position: relative;
z-index: 2;
margin-top: 32px;
padding-right: 100px;
font-size: 16px;
color: #DDD;
font-family: "Times New Roman", Times, serif;
font-style: italic;
font-weight: bold;
}
.menu-bar{
text-align: left;
position: relative;
z-index: 2;
background-color: #020233;
background-image: linear-gradient(bottom, rgb(2,2,51) 44%, rgb(49,49,135) 75%, rgb(27,27,112) 100%);
background-image: -o-linear-gradient(bottom, rgb(2,2,51) 44%, rgb(49,49,135) 75%, rgb(27,27,112) 100%);
background-image: -moz-linear-gradient(bottom, rgb(2,2,51) 44%, rgb(49,49,135) 75%, rgb(27,27,112) 100%);
background-image: -webkit-linear-gradient(bottom, rgb(2,2,51) 44%, rgb(49,49,135) 75%, rgb(27,27,112) 100%);
background-image: -ms-linear-gradient(bottom, rgb(2,2,51) 44%, rgb(49,49,135) 75%, rgb(27,27,112) 100%);

background-image: -webkit-gradient(
    linear,
    left bottom,
    left top,
    color-stop(0.44, rgb(2,2,51)),
    color-stop(0.75, rgb(49,49,135)),
    color-stop(1, rgb(27,27,112))
);
}
.menucontainer{
}
ul.menu{
clear: left;
padding: 0 0 0 50px;
margin: 0;
height:30px;
border-left: 1px solid #2c2c7e;
border-right: 1px solid #020233;
}
.menu li{
position: relative;
list-style-type: none;
float: left;
display: block;
font-size: 15px;
line-height: normal;
padding: 0;
margin: 0;
text-align: center;
z-index: 0;
}
.menu a{
float: left;
display: block;
color: #fff;
padding: 10px 50px 10px;
text-decoration: none;
border-bottom: none;
border-left: 1px solid #020233;
border-right: 1px solid #2c2c7e;
z-index: 0;
cursor: pointer;
}
.menu a, .menu a:link, menu a:visited menu a:active{
text-decoration: none;
color: #DDD;
}
.menu a:hover, .menu a:focus{
text-decoration: none;
color: #19C;
}
.page{
min-height: 10px !important;
background-color: #FFF;
padding: 30px 0 30px 0;
}
.footer {
margin: 0;
text-align: center;
font-size: 12px;
margin-bottom: 20px;
}
.footer ul{
padding: 0; 
margin: 0;
}
.footer li{
line-height: 14px;
display: inline;
padding: 0 10px 0 10px;
margin: 0;
}
.footer a{
cursor: pointer;
}
.footer a, .footer a:link, .footer a:active, .footer a:visited{
text-decoration: none;
color: #06A;
}
.footer a:hover, .footer a:focus{
text-decoration: none;
color: #555;
}
.shadow{
-moz-box-shadow: 1px 2px 4px #888;
-webkit-box-shadow: 1px 2px 4px #888;
box-shadow: 1px 2px 4px #888;
}
.black-shadow{
-moz-box-shadow: 1px 1px 3px #000;
-webkit-box-shadow: 1px 1px 3px #000;
box-shadow: 1px 1px 3px #000;
}
.light-box{
background-color: #faa732;
background-image: linear-gradient(bottom, rgb(250,167,50) 29%, rgb(250,200,135) 65%, rgb(250,185,95) 83%);
background-image: -o-linear-gradient(bottom, rgb(250,167,50) 29%, rgb(250,200,135) 65%, rgb(250,185,95) 83%);
background-image: -moz-linear-gradient(bottom, rgb(250,167,50) 29%, rgb(250,200,135) 65%, rgb(250,185,95) 83%);
background-image: -webkit-linear-gradient(bottom, rgb(250,167,50) 29%, rgb(250,200,135) 65%, rgb(250,185,95) 83%);
background-image: -ms-linear-gradient(bottom, rgb(250,167,50) 29%, rgb(250,200,135) 65%, rgb(250,185,95) 83%);

background-image: -webkit-gradient(
    linear,
    left bottom,
    left top,
    color-stop(0.29, rgb(250,167,50)),
    color-stop(0.65, rgb(250,200,135)),
    color-stop(0.83, rgb(250,185,95))
);
border-radius: 10px;
color: #000;
padding:40px 0 20px 0;
}
.home-content{
background-color: #020233;
background-image: linear-gradient(bottom, rgb(1,1,43) 47%, rgb(3,26,71) 74%, rgb(2,2,51) 87%);
background-image: -o-linear-gradient(bottom, rgb(1,1,43) 47%, rgb(3,26,71) 74%, rgb(2,2,51) 87%);
background-image: -moz-linear-gradient(bottom, rgb(1,1,43) 47%, rgb(3,26,71) 74%, rgb(2,2,51) 87%);
background-image: -webkit-linear-gradient(bottom, rgb(1,1,43) 47%, rgb(3,26,71) 74%, rgb(2,2,51) 87%);
background-image: -ms-linear-gradient(bottom, rgb(1,1,43) 47%, rgb(3,26,71) 74%, rgb(2,2,51) 87%);

background-image: -webkit-gradient(
    linear,
    left bottom,
    left top,
    color-stop(0.47, rgb(1,1,43)),
    color-stop(0.74, rgb(3,26,71)),
    color-stop(0.87, rgb(2,2,51))
);
border-radius: 10px;
color: #DDD;
font-family: "Times New Roman", Times, serif;
font-size: 16px;
}
.home-left img{
margin: 40px 20px 20px 40px;
border-radius: 2px;
}
.home-right{
margin-top: 20px;
margin-bottom: 40px;
}
.btn-warning{
color: #000 !important;
}
.home-content h3{
line-height: 1.4 !important;
margin-bottom: 20px !important;
}
input.learn-more, input.try-it{
margin-top: 30px;
}
form.learn-more, form.try-it{
margin-right: 10px;
display: inline;
}
.center{
text-align: center;
margin: 0 auto;
}
.left{
text-align: left;
}
.right{
text-align: right !important;
}
.table-header{
font-style: italic;
}
.errorlist{
color: #B00;
}
table.tbl-center{
table-layout: fixed;
width: 100%;
}
table.tbl-center th{
padding-right:20px;
padding-left: 20px;
font-weight: normal;
text-align: right;
}
table.tbl-left th{
padding-right:20px;
text-align: right;
}
.bold{
font-weight: bold;
}
.subtle{
color:#888;
font-size: 12px;
}
.radio li{
display: inline;
}
.inactivecrumb{
font-weight: normal;
color: #777;
}
.activecrumb{
font-weight: bold;
color: #333;
}
.inactivecrumb a, .inactivecrumb a:link, .inactivecrumb a:active, .inactivecrumb a:visited{
text-decoration: none;
font-weight: normal;
color: #777;
}
.inactivecrumb a:hover, .inactivecrumb a:focus{
text-decoration: none;
font-weight: normal;
color: #19C;
}
.activecrumb a, .activecrumb a:link, .activecrumb a:active, .activecrumb a:visited{
text-decoration: none;
font-weight: bold;
color: #333;
}
.activecrumb a:hover, .activecrumb a:focus{
text-decoration: none;
font-weight: bold;
color: #19C;
}

